	background. 
	(e_icon_bar_add_item): One happy tigert comming.

2000-03-27  Dan Winship  <danw@helixcode.com>

	* tests/test-movemail.c: new test program. Can be used to copy POP
	mail into your evolution inbox.

2000-03-27  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_get_vcard): remove unneeded g_strdup;

2000-03-27  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/test-card.c: Fixed some warnings.

	* addressbook/backend/ebook/test-client.c: Added a section to test
	cursors and returning an id when adding.

	* addressbook/backend/ebook/e-card-pairs.h: Removed the address
	pairs since they were added to e-card.c.

	* addressbook/backend/ebook/e-card.c,
	addressbook/backend/ebook/e-card.h: Made the set_id function take
	a const char *.

	* addressbook/backend/ebook/e-book-listener.c,
	addressbook/backend/ebook/e-book-listener.h,
	addressbook/backend/ebook/e-book.c,
	addressbook/backend/ebook/e-book.h,
	addressbook/backend/idl/addressbook.idl,
	addressbook/backend/pas/pas-backend-file.c,
	addressbook/backend/pas/pas-book.c,
	addressbook/backend/pas/pas-book.h: Added a get_all_cards function
	and made the response to the create_card function include the card
	id.

	* addressbook/backend/ebook/Makefile.am: Added e-card-cursor.c and
	e-card-cursor.h.

	* addressbook/backend/ebook/e-card-cursor.c,
	addressbook/backend/ebook/e-card-cursor.h: New class for proxying
	to an Evolution_CardCursor.

	* addressbook/backend/pas/Makefile.am: Added pas-card-cursor.c and
	pas-card-cursor.h.

	* addressbook/backend/pas/pas-card-cursor.c,
	addressbook/backend/pas/pas-card-cursor.h: New bonobo class for
	making an Evolution_CardCursor server.

2000-03-27  NotZed  <NotZed@HelixCode.com>

	* tests/test9.c (main): This test is basically now invalid.
	* tests/test11.c (main): Fix for async search api.  Probably works.
	Removed camel-mbox-*.h headers, should be private.
